compilateurDeca/src/test/deca/context/valid/sans_objet/arithmetic/arith_div_types.deca
// Description:
//    Vérifie toutes les combinaisons de types pour l'opérateur DIV.
//
// Resultats:
//    Vérification réussie (décoration et ConvFloat)
// 
// Historique:
//    cree le 11/01/2026

{
    int i = 1;
    float f = 1.0;
    float r;

    int res1 = i /i; 
    r = f/f;    
    r = i/f;   
    r = f/i;  
}