compilateurDeca/src/test/deca/context/invalid/objet/operation/moins_unaire_objet.deca
// Description:
//    Test de contexte : Opérateur unaire - sur un objet.
//
// Resultats:
//    Erreur contextuelle : Type A invalide pour l'opérateur unaire '-'.
//
// Historique:
//    cree le 13/01/2026

class A {}
{
    A a = new A();
    int x = -a;
}